--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/kvalexandr/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/kvalexandr/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/kvalexandr/frontend-project-lvl1#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/node": "^7.6.3",
+    "@babel/preset-env": "^7.6.3"
+  }
 }
