--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "@babel/node": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
     "cross-env": "^6.0.3"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
