--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend-project-lvl1",
-  "version": "1.0.0",
+  "name": "brain-games",
+  "version": "1.3.0",
   "description": "",
   "main": "index.js",
   "files": [
@@ -14,7 +14,8 @@
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js"
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-progression": "dist/bin/brain-progression.js"
   },
   "repository": {
     "type": "git",
