--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "brain-games",
   "version": "1.3.0",
-  "description": "",
+  "description": "Brain games",
+  "keywords": [
+    "brain",
+    "games",
+    "calculate",
+    "even",
+    "gcd",
+    "progression",
+    "prime"
+  ],
   "main": "index.js",
   "files": [
     "dist"
@@ -33,15 +42,15 @@
     "@babel/core": "^7.6.4",
     "@babel/node": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
-    "cross-env": "^6.0.3"
-  },
-  "dependencies": {
-    "@hexlet/pairs": "^1.0.10",
+    "cross-env": "^6.0.3",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.18.2"
+  },
+  "dependencies": {
+    "@hexlet/pairs": "^1.0.10",
     "readline-sync": "^1.4.10"
   }
 }
